<resources>
    <string name="app_name">MovieApp</string>
    <string name="facebook_app_id">367621109202346</string>
    <string name="fb_login_protocol_scheme">fb367621109202346</string>
    <string name="facebook_client_token">5460441a68ee3be4647386f65cd67331</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_sign_in_to_your_account">Please sign in to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="please_fill_in_the_form_to_countinue">Please fill in the form to countinue</string>
    <string name="have_an_account">Have an account?</string>
    <string name="display_name">Display name</string>
    <string name="nix">Nix</string>
    <string name="flet">flet</string>
    <string name="nav_menu">MENU</string>
    <string name="home">Home</string>
    <string name="personal">PERSONAL</string>
    <string name="favorite">Favorite</string>
    <string name="reviews">Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_drawer_open">Navigation drawer open</string>
    <string name="nav_drawer_close">Navigation drawer close</string>
    <string name="movie">Movie</string>
    <string name="tv">TV</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_series">Popular Series</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="top_rated_series">Top rated series</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="movies">Movies</string>
    <string name="load_more">Load more</string>
    <string name="people">People</string>
    <string name="person_name">Person Name</string>
    <string name="cast">Cast</string>
    <string name="videos">Videos</string>
    <string name="posters">Posters</string>
    <string name="backdrop">Backdrop</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="watch_now">Watch Now</string>
    <string name="send">Send</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="no_comment_here">No comment here</string>
    <string name="favorite_count">Your favorites (%s)</string>
    <string name="review_count">Your reviews (%s)</string>
    <string name="default_notification_channel_id">CHANEL_ID</string>
    <string name="title_activity_movie_player">MoviePlayerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="join_room">Join room</string>
    <string name="send_button">Send Button</string>
    <string name="chat_history">Chat history</string>
    <string name="room_id">Room ID: %s</string>
    <string name="start_room">Start Room</string>
    <string name="twitter">Twitter</string>
</resources>